--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Assignment three</title>
 	 
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	 <link rel="stylesheet" href="/css/style.css">
+	 <link rel="stylesheet" href="styles.css">
 	 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
